--- a/SensiTape/Base.lproj/Main.storyboard
+++ b/SensiTape/Base.lproj/Main.storyboard
@@ -440,7 +440,7 @@
                                                 <rect key="frame" x="0.0" y="1" width="188.66666666666666" height="71"/>
                                                 <color key="tintColor" systemColor="labelColor"/>
                                             </imageView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eus-CV-naR">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eus-CV-naR">
                                                 <rect key="frame" x="188.66666666666663" y="0.0" width="188.33333333333337" height="72.333333333333329"/>
                                                 <fontDescription key="fontDescription" name="Koulen-Regular" family="Koulen" pointSize="40"/>
                                                 <nil key="textColor"/>
